force-app/main/default/objects/Invoice_R__c/Invoice_R__c.object-meta.xml
<CustomObject>
    <description>object related to customer invoices</description>
    <label>Invoice R</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices R</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>