force-app/main/default/objects/Invoice_R__c/fields/Grand_total__c.field-meta.xml
<CustomField>
    <fullName>Grand_total__c</fullName>
    <label>Grand total</label>
    <summarizedField>Invoice_Products__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Products__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>