force-app/main/default/objects/Invoice_R__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>