force-app/main/default/objects/Invoice_R__c/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Contacted Once</fullName>
            </value>
            <value>
                <fullName>Contacted Twice</fullName>
            </value>
            <value>
                <fullName>Pending going to Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>