force-app/main/default/objects/Invoice_R__c/listViews/All_Invoice.listView-meta.xml
<ListView>
    <fullName>All_Invoice</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Grand_total__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Notes__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoice</label>
</ListView>