force-app/main/default/objects/Invoice_R__c/listViews/My_invoice_list_view.listView-meta.xml
<ListView>
    <fullName>My_invoice_list_view</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My invoice list view</label>
    <sharedTo>
        <role>CRM</role>
    </sharedTo>
</ListView>